tests/checker/bad/return-bad2.scilla
scilla_version 0

(* Some of match statement's arms don't return while other return *)

contract ReturnBad2()

procedure match_no_ret(a: Bool) -> BNum
  match a with
  | True =>
    ret = _creation_block;
    return ret
  | False =>
    ret = _creation_block
    (* Error: no return *)
  end
end
procedure match_no_ret_fixed(a: Bool) -> BNum
  match a with
  | True =>
    ret = _creation_block;
    return ret
  | False =>
    ret = _creation_block;
    return ret (* OK *)
  end
end
